--- a/react-frontend/src/assets/global.css
+++ b/react-frontend/src/assets/global.css
@@ -3,8 +3,8 @@
   margin: 0;
   padding: 0;
 }
-html{
-  height: 100%;
+html {
+  height: auto;
   width: 100%;
 }
 body {
@@ -16,8 +16,10 @@ body {
   color: #ffead1;
   font-family: "Golos Text", sans-serif;
 }
-#root{
+#root {
   display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
   width: 100%;
   height: 100%;
 }
@@ -28,6 +30,28 @@ h1 {
 p {
   font-size: 1.5em;
   color: #214263;
+}
+button {
+  display: block;
+  border: 1px solid #00ff7f;
+  outline: none;
+  border-radius: 5px;
+  transition: all 0.3s ease;
+  cursor: pointer;
+  margin-top: 8px;
+  text-decoration: none;
+  color: #ffead1;
+  background-color: #0f1215;
+}
+button:hover {
+  background-color: #60b48a;
+  color: #0f1215;
+  border-color: #60b48a;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
 }
 
 .btn {
@@ -48,4 +72,73 @@ p {
   background-color: #60b48a;
   color: #0f1215;
   border-color: #60b48a;
+}
+
+.general_container {
+  display: flex;
+  flex-direction: column;
+  margin: 10px 10px;
+  height: 100%;
+  width: 100%;
+}
+
+.content_container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.character_item {
+  position: relative;
+  border: 1px solid #3eb489;
+  border-radius: 10px;
+  width: 300px;
+  height: 450px;
+  margin-top: 5px;
+  padding-top: 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  margin-right: 5px;
+}
+
+.health_bar_back {
+  position: relative;
+  width: 150px;
+  height: 16px;
+  background-color: rgb(165, 0, 0);
+  border: 1px solid #3eb489;
+}
+
+.health_bar_front {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  background-color: #127c32;
+  font-size: 13px;
+}
+
+.close_button {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  cursor: pointer;
+}
+.delBtn.active {
+  display: block;
+  width: 25px;
+  height: 25px;
+  position: absolute;
+  right: 5px;
+  top: 5px;
+  border: none;
+  opacity: 0.3;
+}
+.delBtn.active:hover {
+  opacity: 1;
+}
+
+.delBtn {
+  display: none;
 }
